부모 컴포넌트에서 자식 컴포넌트로 상태 전달

--- a/hong-app/src/app/app.component.html
+++ b/hong-app/src/app/app.component.html
@@ -26,7 +26,7 @@
           Add user
         </button>
       </div>
-      <app-user-list [usersChild]="usersParents"></app-user-list>
+      <app-user-list [usersChildSet]="usersParents"></app-user-list>
     </div>
   </div>
 </div>
