자식 컴포넌트에서 부모 컴포넌트로 상태 전달(기능-remove)

--- a/hong-app/src/app/app.component.html
+++ b/hong-app/src/app/app.component.html
@@ -26,7 +26,10 @@
           Add user
         </button>
       </div>
-      <app-user-list [usersChildSet]="usersParents"></app-user-list>
+      <app-user-list
+        [usersChildSet]="usersParents"
+        (remove123)="removeUser($event)"
+      ></app-user-list>
     </div>
   </div>
 </div>
